# pr-size-control

./: Makefile  README.md  pyproject.toml
src/pr_size_control/: gitea_pr_num.py  gitea_pr_patch.py  gitea_repo_owner.py  intable.py  stringabe.py
src/pr_size_control/exceptions/: gitea_exceptions.py
tests/: test_gitea_pr_patch.py  test_parse_gitea_webhook.py
tests/fixtures/: git_patch_example.patch  gitea_webhook_example.json
